# kars_bot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  justfile  lefthook.yml  release-plz.toml
.githooks/: post-merge  pre-commit  pre-push
.github/: dependabot.yml  paths-filter.yml
.github/workflows/: CI.yml  cargo-dist-preview.yml  docs-guard.yml  pr-version-guard.yml  quality-gates.yml  release-musl-build.yml  release-plz-preview.yml  release-plz.yml  release.yml  reusable-policy-quality.yml  reusable-release.yml  reusable-rust-quality.yml  sync-main-to-develop.yml  tag-version-verify.yml
docs/: README.md  ROADMAP.md  operations.md  project-structure.md  quickstart.md  runtime.md
docs/architecture/: overview.md
docs/contributing/: docs-style.md
docs/reference/: commands.md  config.md  reliability-slo.md
docs/releases/: binary-size.csv  runtime-validation-checklist.md  runtime-validation-report.txt  v1.2.0-baseline.md
docs/runbooks/: incident.md  release.md  rollback.md
scripts/: build_musl.sh  capture_phase0_baseline.sh  check_tls_stack.sh  ci_local.sh  doctor.sh  enforce_git_flow.sh  generate_docs_reference.sh  hook_pre_commit.sh  hook_pre_push.sh  install_hooks.sh  pre_release_chaos_checks.sh  release_plz_preview.sh  release_tag.sh  server_update.sh  sync_main.sh  validate_docs.sh  validate_release_flow.sh  validate_runtime_matrix.sh  verify_runbook_gate.sh
scripts/lib/: git_diff_scope.sh  log.sh
src/: anomaly_journal.rs  app_builder.rs  app_context.rs  bot_runtime.rs  capabilities.rs  commands.rs  config.rs  contracts.rs  jobs.rs  main.rs  monitor.rs  monitor_context.rs  release_notes.rs  reporting_store.rs  system.rs
src/anomaly_db/: maintenance.rs  mod.rs  model.rs  paths.rs  read.rs  write.rs
src/architecture/: adapters.rs  mod.rs  ports.rs  use_cases.rs
src/commands/: command_def.rs  handler.rs  helpers.rs  mod.rs  router.rs
src/commands/features/: alerts.rs  health.rs  menu.rs  mod.rs  recent.rs  status.rs  system_info.rs  update.rs
src/commands/features/export/: mod.rs  parser.rs  payload.rs
src/commands/helpers/: auth.rs  control.rs  formatting.rs  mod.rs  redaction.rs
src/config/: defaults.rs  io.rs  mod.rs  schema.rs  test_utils.rs  validate.rs
src/jobs/: config_reload.rs  mod.rs  monitor.rs  release_notify.rs  schedules.rs
src/jobs/config_reload/: tests.rs
src/monitor/: evaluator.rs  history.rs  mod.rs  notify.rs  provider.rs  service.rs  state.rs
src/monitor/service/: clock.rs  core.rs  mod.rs  mute.rs  snapshot.rs  tests.rs
src/monitor/state/: alert_logic.rs  daily_summary.rs  mod.rs
src/reporting_store/: mod.rs  model.rs  tests.rs
src/test_utils/: mod.rs
(+25 files in other folders)
