[package]
name = "kars_bot"
version = "1.7.1"
edition = "2024"
resolver = "3"
repository = "https://github.com/recregt/kars_bot"

[dependencies]
teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
file-rotate = "0.8"
html-escape = "0.2"
sysinfo = "0.29"
thiserror = "1"
chrono = "0.4"
toml = "0.8"
log = "0.4"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "chrono", "ab_glyph"] }
image = { version = "0.25", default-features = false, features = ["png"] }
notify = "6"
sled = "0.34"
axoupdater = "0.9.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dist]
inherits = "release"
